--- a/Proyecto2/SmileSoft/webapp/templates/inicio/registropaciente.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/registropaciente.html
@@ -168,14 +168,14 @@
                         <button class="btn btn-success" type="submit" style="margin: 10px;">Guardar</button>
                         <!-- <button href="/administrativo/agregar_antecedente_clinico/ " class="btn btn-success" value="Agregar antecedente clinico" style="margin: 10px;">Agregar antecedente clinico</button> -->
                         <!-- <input href="/administrativo/agregar_antecedente_clinico/ " type="submit" value="Agregar antecedente clinico" style="margin: 10px;" class= "btn btn-primary btn-block txt-white"> -->
-                        <a href=" /sesion/registropaciente/ " class="btn btn-danger" style="margin: 10px;">Cancelar</a>
+                        <a href=" /registropaciente/ " class="btn btn-danger" style="margin: 10px;">Cancelar</a>
                     </div>
         <hr>
          <div class="d-flex justify-content-center">
                         {% comment %} <button class="btn btn-primary"  href=" /sesion/registrologinpaciente/ " 
                         type="submit" style="margin: 10px;">Crear su usuario aqui</button>
           {% endcomment %}
-                            <a href=" /sesion/login/ " class="btn btn-info" style="margin: 10px;" align="center">
+                            <a href=" /login/ " class="btn btn-info" style="margin: 10px;" align="center">
                                 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
