Corrección de urls
-Faltaba modificar las urls que aun hacian refencia a /sesion

--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -70,16 +70,16 @@
                                 
                         </div>
                         <div id="register-link" class="text-right">
-                            {% comment %} <a href="/sesion/registrologin/" class="text-black">Registrarse Aquí</a> {% endcomment %}
-                              <a href="/sesion/registropaciente/" class="text-black">Registrarse Aquí</a>
+                            {% comment %} <a href="/registrologin/" class="text-black">Registrarse Aquí</a> {% endcomment %}
+                              <a href="/registropaciente/" class="text-black">Registrarse Aquí</a>
                         </div>
                          <br>
                          <div id="recuperar" class="text-center">
-                            <a href="/sesion/recuperar_pass/" class="text-black">¿Olvidaste tu contraseña?</a>
+                            <a href="/recuperar_pass/" class="text-black">¿Olvidaste tu contraseña?</a>
                         </div>
 
                           <div id="enviarcorreo" class="text-center">
-                            <a href="/sesion/enviarcorreo/" class="text-black">enviar un correo</a>
+                            <a href="/enviarcorreo/" class="text-black">enviar un correo</a>
                         </div>
 
                        <br>
