Correccion de Modificar Persona
Modificar Persona ya funciona correctamente, ya se puede agregar, quitar o modificar a la persona como Funcionario o Paciente, como Especialista de Salud aun no está implementado

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_paciente.html
@@ -5,7 +5,7 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>modificar Paciente</h2> </center>    
+            <center>  <h2>Modificar Paciente</h2> </center>    
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
                         <i class="bi bi-person-plus"> ¡ Ingrese los datos del paciente ! </i>
