Cambios en el Panel de Control/ Configuracion de Paciente/Algunos Permisos

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_antecedente.html
@@ -21,7 +21,7 @@
             <center><h4 style="font:;">Ingrese su antecedente clinico</h4></center>
         </div>
  <br>
-           <form action="" method="POST">
+           <form method="POST">
                             {%csrf_token%}
                             {%if menssage%}
                             <div class="alert alert-success" role="alert">
