--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/editar_persona.html
@@ -75,13 +75,13 @@
                         </div>
                     </table>
                 
-                    <table  align="left" >
+                    {% comment %} <table  align="left" >
                         <tr>
                             <td> 
                                 <a href="/administrativo/listar_persona/" class="btn btn-info">Ver listado de personas </a> 
                             </td>
                         </tr>
-                    </table>
+                    </table> {% endcomment %}
                 </form>
             </div>
         </div>
