--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_persona.html
@@ -64,12 +64,12 @@
                         <a href="/administrativo/listar_persona/" class="btn btn-danger" style="margin: 10px;">Cancelar</a>
                     </div>
                     <hr>
-                    <table  align="right" >
+                    {% comment %} <table  align="right" >
                         <tr>
                             <td> 
                                 <a href="/administrativo/agregar_peresona/" class="btn btn-success">Agregar a otra persona +</a> 
                             </td>
-                        </tr>
+                        </tr> {% endcomment %}
                         <div class="container mt-3 text-center">
                             <a href="http://127.0.0.1:8000/panel_control/inicio/" data-toggle="tooltip" title="Regresa al inicio"> 🔼Inicio</a>
                         </div>
