--- a/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/modificar_usuario.html
@@ -14,17 +14,7 @@
             <center>  <h2> Modificar Usuario</h2> </center>
             <div class="card-body">
                 <form action="" method="post">
-                    {%csrf_token%}
-
-                    {%if mensaje%}
-                    <div class="alert alert-success" role="alert">
-                    ✅ ¡Modificación exitosa!
-                    </div>
-                    {%endif%}
-
-                   
-                    
-                     
+                    {%csrf_token%}                     
                     {% if messages %}
                         <ul class="messages">
                           
@@ -46,7 +36,7 @@
                         {{form.as_p}}
                      
                     </b>  
-                    
+
                         <!--Opciones-->
                         <div class="d-flex justify-content-center">
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
@@ -71,7 +61,7 @@
                                  <a href="http://127.0.0.1:8000/base/" data-toggle="tooltip" title="Vuelve al inicio"> 🔼 Inicio</a>
                                </div>
                             <tr>
-                            <td> <a href="/sesion/listar_usuario/" class="btn btn-info">Ver listado de los usuarios </a> </td>
+                            <td> <a href="/listar_usuario/" class="btn btn-info">Ver listado de los usuarios </a> </td>
                             </tr>
                          </table>
 
