Correccion de Asignar tratamientos a pacientes
Al asignar tratamientos a los pacientes ya no es necesario seleccionar el numero de documento, y al asignar muestra el nombre del paciente

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente2.html
@@ -46,7 +46,7 @@
 			<td>{{ paciente.numero_documento.correo_electronico }}</td>
 			<td>{{ paciente.numero_documento.fecha_nacimiento }}</td> -->
 			<td>
-				<a class="btn btn-primary" href="/administrativo/asignar_tratamiento/">
+				<a class="btn btn-primary" href="/administrativo/asignar_tratamiento/{{ paciente.numero_documento }}">
 					<i class="bi-pencil-square"></i>
 					Asignar Tratamiento
 				</a>
