--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/asignar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/asignar_tratamiento.html
@@ -2,23 +2,33 @@
 
 {%block content%}
 
-  <div class=" col-md-10 offset-md-1" >
+  <div class= "col-12 col-md-8 offset-md-2" >
         <div class="card">
             <br>
-            <center>  <h2>Asignar Tratamiento</h2> </center>      
+            <center>  <h2>Asignar Tratamiento</h2> </center>
                 <form method="POST" id="group_form" novalidate="">
                     {%csrf_token%}
                         {%if mensaje%}
                             <div class="alert alert-success" role="alert">
                                   ✅ Asignado exitosamente
                             </div>
-                            {%endif%}
+                        {%endif%}
+                        <br>
+                        {% if object%}
+                            <center>
+                                        <h5>
+                                           <b>Paciente:</b> <i>{{object.nombre}}  {{object.apellido}}</i>
+                                        </h5>
+                            </center>
+                        {% endif %}
                     <div style="margin: 20px;" >
-                     
-                                {{form.as_p}}
-
+                        <table>
+                            <div class="form-group">
+                                <label for="{{form.nombre_tratamiento.name}}" st><b>{{form.nombre_tratamiento.label}}</b></label>
+                                {{form.nombre_tratamiento}}
+                            </div>
+                        </table>
                     </div>
-
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
                             <i class="bi-save"></i>
@@ -30,10 +40,7 @@
                         </a> -->
                     </div>
                     <hr>
-                   
                 </form>
-            </div>
-             <div>
         </div>
-</div>
+    </div>
 {%endblock%}
