Modificacion de Creacion de usuario de paciente
Modifique la forma de crear usuarios de pacientes desde el login, aun no está terminado

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
@@ -104,8 +104,8 @@
                         </div>
                         <br>
                         <div class="form-group">
-                            <label for="{{form3.intolerancia_anestecia.name}}">{{form3.intolerancia_anestecia.label}}</label>
-                            {{form3.intolerancia_anestecia}}
+                            <label for="{{form3.tolerancia_anestecia.name}}">{{form3.tolerancia_anestecia.label}}</label>
+                            {{form3.tolerancia_anestecia}}
                         </div>
                         <br>
                         <div class="form-group">
