Modificacion de crear usuario a paciente
-Permite crear usuario a pacientes registrados autogenerando usuario y contraseña

--- a/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_envio_correo.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/mensaje_envio_correo.html
@@ -42,22 +42,24 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-5">
                         <!-- <table> -->
-                        <h3 class="text-center text-Gray"><i>Confirmación de Registro</i> </h3>
+                        <h3 class="text-center text-Gray"><i>¡ LISTO !</i> </h3>
                         <div class="row justify-content-center align-items-center">
                             <!-- <div class="col-md-10"> -->
                             <p class="text-justify">
                                 <i>
-                                    Usted se encuentra registrado como paciente,
-                                    pero no tiene una cuenta de usuario, ¿desea solicitarlo?
+                                    ¡Cuenta de usuario creado con exito!
+                                    Le ha sido enviado su usuario y contraseña 
+                                    al correo electrónico que usted ha registrado. 
+                                </i>
+                                <i>
+                                    Por favor reviselo e ingrese esos datos para iniciar sesión.
                                 </i>
                             </p>
                             <!-- </div> -->
                         </div>
                         <div>
                             <div align="center" > 
-                                <a style="width: 50px;" href="/generar_usuario_paciente/{{cedula}}" class="btn btn-success"> Si </a>
-                                <!-- <a style="width: 50px;" href="#" class="btn btn-success"> Si </a> -->
-                                <a href="/login/" class="btn btn-danger">No</a>
+                                <a style="width: 50px;" href="/login/" class="btn btn-success"> OK </a>
                             </div>
                 </div>
             </div>
