--- a/Proyecto2/SmileSoft/webapp/templates/usuario/cambiar_password_usuario.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/cambiar_password_usuario.html
@@ -13,7 +13,7 @@
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2> Modificar Usuario</h2> </center>
+            <center>  <h2> Cambiar contraseña</h2> </center>
             <div class="card-body">
                 <form action="" method="post">
                     {%csrf_token%}                     
@@ -33,45 +33,31 @@
                         </ul>
                         {% endif %}
 
-                        <!--Formulario de modificaciones-->
-                        <b>
-                            <div class="form-group">
-                                <label for="{{form.usuario.name}}">{{form.usuario.label}}</label>
-                                {{form.usuario}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.numero_documento.name}}">{{form.numero_documento.label}}</label>
-                                {{form.numero_documento}}
-                            </div>
-                            <br>
-                            <a href="/cambiar_password_usuario/{{object.usuario}}" class="btn btn-outline-info">
-                                <i class="bi bi-key"></i>
-                                Cambiar contraseña
-                            </a>
-                            <br>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.groups.name}}">{{form.groups.label}}</label>
-                                {{form.groups}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="{{form.is_active.name}}">{{form.is_active.label}}</label>
-                                {{form.is_active}}
-                            </div>
-                            <div class="form-group">
-                                <label for="{{form.is_admin.name}}">{{form.is_admin.label}}</label>
-                                {{form.is_admin}}
-                            </div>
-                        </b>
+                        <!--Formulario de modificaciones-->    
+                      <b>
+                          <center>
+                            <h4><b>Usuario:</b> <i>{{object.usuario}}</i></h4>
+                          </center>
+                          <br>
+                        <div class="form-group">
+                            <label for="{{form.password1.name}}">{{form.password1.label}}</label>
+                            {{form.password1}}
+                        </div>
+                        <br>
+                        <div class="form-group">
+                            <label for="{{form.password2.name}}">{{form.password2.label}}</label>
+                            {{form.password2}}
+                        </div>
+                        <br>
+                     
+                        </b>  
 
                         <!--Opciones-->
                         <div class="d-flex justify-content-center">
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
                             <input type="submit" value="Guardar " class= "btn btn-primary btn-block txt-white" name="_save">
                             &nbsp;
-                            <a href="/listar_usuario/" class= "btn btn-secondary btn-block txt-white">Cancelar</a>
+                            <a href="/modificar_usuario/{{object.usuario}}" class= "btn btn-secondary">Cancelar</a>  
                         
                         </div>    
                 </form>
@@ -85,17 +71,13 @@
 
                     <hr>
                         
-                        <table  align="right" >
-                               <div class="container mt-3 text-left">
+                        <table  align="center" >
+                               <div class="container mt-3 text-center">
                                  <a href="http://127.0.0.1:8000/base/" data-toggle="tooltip" title="Vuelve al inicio"> 🔼 Inicio</a>
                                </div>
                             <tr>
-                            <td> <a href="/listar_usuario/" class="btn btn-info">Ver listado de los usuarios </a> </td>
                             </tr>
                          </table>
 
 
 {%endblock%}
-
-
-
